tests/parsing/const_redefinition_in_file/stderr.golden
error: redefinition of constant 'A', first definition line 1 column 7
bus.fbd +3:7
   |
 3 | const A = 2
   |       ^
